<resources>
    <string name="app_name">Jamali</string>
    <string name="login_register">Login/Register</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="_966">+966-</string>
    <string name="_123456789">123456789</string>
    <string name="send">Send</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_code">Enter The OTP Code</string>
    <string name="didn_t_receive_the_otp">didn\'t receive the OTP</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
</resources>